Added two more themes. Added 'Smart' title page features. Included some debugging gems.

--- a/data/book.yml
+++ b/data/book.yml
@@ -4,6 +4,7 @@ author: Bryan Braun
 license: Creative Commons Attribution Non-commercial No Derivative Works 3.0
 license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/us/
 github_url: http://github.com/bryanbraun/my-book
+theme: glide
 
 # Book transations
 languages:
