Restructured project to support distinct theme folders. Cleaned up some gems.

--- a/data/book.yml
+++ b/data/book.yml
@@ -4,7 +4,7 @@ title: Punching Bag
 author: Me
 license: cc-by-sa
 gh_full_name: bryanbraun/punching-bag
-theme: Epsilon
+theme: hamilton
 github_pages_url: http://bryanbraun.github.io/punching-bag
 license_name: Attribution-ShareAlike
 license_url: https://creativecommons.org/licenses/by-sa/4.0
