--- a/data/book.yml
+++ b/data/book.yml
@@ -1,5 +1,5 @@
 ---
-title: Example Book
+title: Franklin
 author: You
 github_url: https://github.com/yourname/example-book
 domain: http://yourname.github.io/example-book
